--- a/main/templates/main/blog.html
+++ b/main/templates/main/blog.html
@@ -3,43 +3,131 @@
 {% load static %}
 
 {% block content %}
-    <div class="container land">
-        <div class="row">
-            <div class="col-md-5">
-                <h1>ΟΚ!Τhess</h1>
-                <h2>Your early stage partner</h2>
-                <p id="desc">OK!Thess provides space and technical support to teams of people with innovative ideas helping them to <strong>Validate a Business Model Fast</strong>, rather than hastily, and to <strong>Meet, Mix  and Connect</strong> with like-minded peers.</p>
-                <form>
-                    <input type="text" name="firstname" placeholder=" First name">
-                    <br>
-                    <input type="email" name="email" placeholder=" email">
-                </form>
-                <br>
-                <a id="yellowcall" href="http://okthess.gr/dev/about.html" role="button"><span class="glyphicon glyphicon-exclamation-sign"></span><strong>Get</strong> in the Loop!</a>
-            </div>
-            <div class="col-md-7">
-                <a class="w3-btn-floating w3-hover-dark-grey w3-display-left" onclick="plusDivs(-1)">&#10094;</a>
-                <a class="w3-btn-floating w3-hover-dark-grey w3-display-right" onclick="plusDivs(1)">&#10095;</a>
-                <div class="mySlides">
-                    <img src="http://okthess.gr/dev/img/call.jpg"/>
-                    <div class="w3-display-bottomleft w3-large w3-padding-16 w3-black">
-                        Community Events
-                    </div>
-                </div>
-                <div class="mySlides">
-                    <img src="https://scontent-sof1-1.xx.fbcdn.net/v/t1.0-9/17457548_1889123364710078_5522191075335263056_n.jpg?oh=cd9d7391f8cdc50434a564faf5b57ecc&oe=5A2C7E98"/>
-                    <div class="w3-display-bottomright w3-large w3-padding-16 w3-black">
-                        Mentoring Sessions
-                    </div>
-                </div>
-                <div class="mySlides">
-                    <img src="http://okthess.gr/dev/v2/slide3.jpg">
-                    <div class="w3-display-topleft w3-large w3-padding-16 w3-black">
-                        Accelerator
-                    </div>
-                </div>
-            </div>
+<div class="container land">
+  <div class="row">
+    <div class="col-md-9">
+      <div class="blog-post">
+        <div class="col-md-5">
+         <img class="blog-post-image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRDrcA7QXTjbPBNiVLeS6QRmBDyN4rlV4yYM7soUjYmKM-peuMWug">
         </div>
+        <div class="col-md-7">
+         <div class="blog-post-teaser">
+          <h4 class="blog-post-title">BMC Workshop<small>(12 Ιανουαρίου 2017)</small></h4>
+            <h6 class="blog-post-meta text-muted">Αναρτήθηκε: 4 Ιανουαρίου 2017</h6>
+            <p>Ο ρόλος και η χρησιμότητα του Business Model Canvas στην εξέλιξη μιας startup από επιχειρηματική ιδέα σε βιώσιμη επιχείρηση. </p>
+            <a id="yellowcall" href="http://localhost:8000/blog/sample-post/" role="button"><span class="glyphicon glyphicon-exclamation-sign"></span><strong>Read</strong> more »</a>
+         </div>
+       </div>
+      </div>
+      <div class="blog-post">
+        <div class="col-md-5">
+         <img class="blog-post-image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRDrcA7QXTjbPBNiVLeS6QRmBDyN4rlV4yYM7soUjYmKM-peuMWug">
+        </div>
+        <div class="col-md-7">
+         <div class="blog-post-teaser">
+          <h4 class="blog-post-title">BMC Workshop<small>(12 Ιανουαρίου 2017)</small></h4>
+            <h6 class="blog-post-meta text-muted">Αναρτήθηκε: 4 Ιανουαρίου 2017</h6>
+            <p>Ο ρόλος και η χρησιμότητα του Business Model Canvas στην εξέλιξη μιας startup από επιχειρηματική ιδέα σε βιώσιμη επιχείρηση. </p>
+            <a id="yellowcall" href="http://localhost:8000/blog/sample-post/" role="button"><span class="glyphicon glyphicon-exclamation-sign"></span><strong>Read</strong> more »</a>
+         </div>
+       </div>
+      </div>
+      <div class="blog-post">
+        <div class="col-md-5">
+         <img class="blog-post-image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRDrcA7QXTjbPBNiVLeS6QRmBDyN4rlV4yYM7soUjYmKM-peuMWug">
+        </div>
+        <div class="col-md-7">
+         <div class="blog-post-teaser">
+          <h4 class="blog-post-title">BMC Workshop<small>(12 Ιανουαρίου 2017)</small></h4>
+            <p class="blog-post-meta text-muted">Αναρτήθηκε: 4 Ιανουαρίου 2017</p>
+            <p>Ο ρόλος και η χρησιμότητα του Business Model Canvas στην εξέλιξη μιας startup από επιχειρηματική ιδέα σε βιώσιμη επιχείρηση. </p>
+            <a id="yellowcall" href="http://localhost:8000/blog/sample-post/" role="button"><span class="glyphicon glyphicon-exclamation-sign"></span><strong>Read</strong> more »</a>
+         </div>
+       </div>
+      </div>
+      <div class="blog-post">
+        <div class="col-md-5">
+         <img class="blog-post-image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRDrcA7QXTjbPBNiVLeS6QRmBDyN4rlV4yYM7soUjYmKM-peuMWug">
+        </div>
+        <div class="col-md-7">
+         <div class="blog-post-teaser">
+          <h4 class="blog-post-title">BMC Workshop<small>(12 Ιανουαρίου 2017)</small></h4>
+            <p class="blog-post-meta text-muted">Αναρτήθηκε: 4 Ιανουαρίου 2017</p>
+            <p>Ο ρόλος και η χρησιμότητα του Business Model Canvas στην εξέλιξη μιας startup από επιχειρηματική ιδέα σε βιώσιμη επιχείρηση. </p>
+            <a id="yellowcall" href="http://localhost:8000/blog/sample-post/" role="button"><span class="glyphicon glyphicon-exclamation-sign"></span><strong>Read</strong> more »</a>
+         </div>
+       </div>
+      </div>
+      <div class="blog-post">
+        <div class="col-md-5">
+         <img class="blog-post-image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRDrcA7QXTjbPBNiVLeS6QRmBDyN4rlV4yYM7soUjYmKM-peuMWug">
+        </div>
+        <div class="col-md-7">
+         <div class="blog-post-teaser">
+          <h4 class="blog-post-title">BMC Workshop<small>(12 Ιανουαρίου 2017)</small></h4>
+            <p class="blog-post-meta text-muted">Αναρτήθηκε: 4 Ιανουαρίου 2017</p>
+            <p>Ο ρόλος και η χρησιμότητα του Business Model Canvas στην εξέλιξη μιας startup από επιχειρηματική ιδέα σε βιώσιμη επιχείρηση. </p>
+            <a id="yellowcall" href="http://localhost:8000/blog/sample-post/" role="button"><span class="glyphicon glyphicon-exclamation-sign"></span><strong>Read</strong> more »</a>
+         </div>
+       </div>
+      </div>
+      <div class="blog-post">
+        <div class="col-md-5">
+         <img class="blog-post-image" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRDrcA7QXTjbPBNiVLeS6QRmBDyN4rlV4yYM7soUjYmKM-peuMWug">
+        </div>
+        <div class="col-md-7">
+         <div class="blog-post-teaser">
+          <h4 class="blog-post-title">BMC Workshop<small>(12 Ιανουαρίου 2017)</small></h4>
+            <p class="blog-post-meta text-muted">Αναρτήθηκε: 4 Ιανουαρίου 2017</p>
+            <p>Ο ρόλος και η χρησιμότητα του Business Model Canvas στην εξέλιξη μιας startup από επιχειρηματική ιδέα σε βιώσιμη επιχείρηση. </p>
+            <a id="yellowcall" href="http://localhost:8000/blog/sample-post/" role="button"><span class="glyphicon glyphicon-exclamation-sign"></span><strong>Read</strong> more »</a>
+         </div>
+       </div>
+      </div>
     </div>
-
+    <div class="col-md-3">
+      <h4>Resources</h4>
+      <div class="sidebar-module sidebar-module-inset">
+        <ul>
+          <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/" target="_blank">Business Owner Compensation. Marathon or Sprint</a></li>
+          <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/" target="_blank">Business Owner Compensation. Marathon or Sprint</a></li>
+          <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/" target="_blank">Business Owner Compensation. Marathon or Sprint</a></li>
+          <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/" target="_blank">Business Owner Compensation. Marathon or Sprint</a></li>
+          <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/" target="_blank">Business Owner Compensation. Marathon or Sprint</a></li>
+          <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/" target="_blank">Business Owner Compensation. Marathon or Sprint</a></li>
+          <li><a href="http://www.investopedia.com/advisor-network/articles/business-owner-compensation-marathon-or-sprint/" target="_blank">Business Owner Compensation. Marathon or Sprint</a></li>
+        </ul>
+      </div>
+      <div class="sidebar-module">
+        <h4>Archives</h4>
+        <ol class="list-unstyled">
+          <li><a href="#">March 2014</a></li>
+          <li><a href="#">February 2014</a></li>
+          <li><a href="#">January 2014</a></li>
+          <li><a href="#">December 2013</a></li>
+          <li><a href="#">November 2013</a></li>
+          <li><a href="#">October 2013</a></li>
+          <li><a href="#">September 2013</a></li>
+          <li><a href="#">August 2013</a></li>
+          <li><a href="#">July 2013</a></li>
+          <li><a href="#">June 2013</a></li>
+          <li><a href="#">May 2013</a></li>
+          <li><a href="#">April 2013</a></li>
+        </ol>
+      </div>
+      <div class="sidebar-module">
+        <h4>Elsewhere</h4>
+        <ol class="list-unstyled">
+          <li><a href="#">GitHub</a></li>
+          <li><a href="#">Twitter</a></li>
+          <li><a href="#">Facebook</a></li>
+        </ol>
+      </div>
+    </div>
+  </div>
+</div>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+<script src="http://okthess.gr/dev/js/accordion.js"></script>
+<script src="http://okthess.gr/dev/js/main.js"></script>
 {% endblock %}
