--- a/main/templates/main/post.html
+++ b/main/templates/main/post.html
@@ -3,43 +3,16 @@
 {% load static %}
 
 {% block content %}
-    <div class="container land">
-        <div class="row">
-            <div class="col-md-5">
-                <h1>ΟΚ!Τhess</h1>
-                <h2>Your early stage partner</h2>
-                <p id="desc">OK!Thess provides space and technical support to teams of people with innovative ideas helping them to <strong>Validate a Business Model Fast</strong>, rather than hastily, and to <strong>Meet, Mix  and Connect</strong> with like-minded peers.</p>
-                <form>
-                    <input type="text" name="firstname" placeholder=" First name">
-                    <br>
-                    <input type="email" name="email" placeholder=" email">
-                </form>
-                <br>
-                <a id="yellowcall" href="http://okthess.gr/dev/about.html" role="button"><span class="glyphicon glyphicon-exclamation-sign"></span><strong>Get</strong> in the Loop!</a>
-            </div>
-            <div class="col-md-7">
-                <a class="w3-btn-floating w3-hover-dark-grey w3-display-left" onclick="plusDivs(-1)">&#10094;</a>
-                <a class="w3-btn-floating w3-hover-dark-grey w3-display-right" onclick="plusDivs(1)">&#10095;</a>
-                <div class="mySlides">
-                    <img src="http://okthess.gr/dev/img/call.jpg"/>
-                    <div class="w3-display-bottomleft w3-large w3-padding-16 w3-black">
-                        Community Events
-                    </div>
-                </div>
-                <div class="mySlides">
-                    <img src="https://scontent-sof1-1.xx.fbcdn.net/v/t1.0-9/17457548_1889123364710078_5522191075335263056_n.jpg?oh=cd9d7391f8cdc50434a564faf5b57ecc&oe=5A2C7E98"/>
-                    <div class="w3-display-bottomright w3-large w3-padding-16 w3-black">
-                        Mentoring Sessions
-                    </div>
-                </div>
-                <div class="mySlides">
-                    <img src="http://okthess.gr/dev/v2/slide3.jpg">
-                    <div class="w3-display-topleft w3-large w3-padding-16 w3-black">
-                        Accelerator
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-
+    
+          <h2 class="blog-post-title">BMC Workshop</h2>
+          <p>Ο ρόλος και η χρησιμότητα του Business Model Canvas στην εξέλιξη μιας startup από επιχειρηματική ιδέα σε βιώσιμη επιχείρηση.</p>
+          <p>H συνεργασία OK!Thess και <a href="http://www.kemel.gr/" target="_blank">ΚΕΜΕΛ</a> ξεκινά με ένα workshop που έχει ως κύριο στόχο να αναδείξει τον Καμβά Επιχειρηματικού Μοντέλου ως βασικό επιχειρηματικό εργαλείο, το οποίο σε συνδυασμό με τεχνικές όπως SWOT Analysis, Brain Storming κ.α., αποτελεί μια αποτελεσματική μέθοδο για την επίλυση σημαντικών προβλημάτων στην πορεία μιας startup.</p>
+          <p>Η ημερίδα θα ξεκινήσει με την παρουσίαση του BMC και της πελατοκεντρικής επιχειρηματικής προσέγγισης που επιβάλει ως αποτέλεσμα της εξέλιξης του σύγχρονου Marketing.</p>
+          <p>Στην συνέχεια, προεπιλεγμένες ομάδες από το OK!Thess, θα παρουσιάσουν την επιχειρηματική ιδέα τους, το στάδιο στο οποίο βρίσκονται και το δεξί μέρος του BMC που αφορά στην εξωστρέφεια, αναφέροντας και το σημαντικότερο πρόβλημα που κατά την γνώμη τους αντιμετωπίζουν.</p>
+          <p>Θα δημιουργηθούν στην συνέχεια μικτές ομάδες μεντόρων του ΚΕΜΕΛ και startuppers προκειμένου να επιδιωχθεί η βέλτιστη λύση του προβλήματος μέσω τεχνικών brain storming.</p>
+          <p>Το workshop θα κλείσει με παρουσίαση των αποτελεσμάτων.</p>
+          <p>	------------ </p>
+          <p>Το πρώτο μέρος του workshop αρχίζει στις 10:00 και είναι ανοιχτό σε όλους. Υπάρχει περίπτωση να δοθεί η ευκαιρία και σε άλλες ομάδες - πέρα από τις ομάδες που φιλοξενούνται στο OK!Thess - να παρουσιάσουν το BMC τους και να έχουν feedback από τους μέντορες.</p>
+          <p>Αν ενδιαφέρεστε να παρακολουθήσετε το γενικό μέρος και να παρουσιάσετε το BMC σας στείλτε email στην διεύθυνση: mail@okthess.gr</p>
+          <p>Δηλώνοντας το όνομα σας ή το όνομα της εταιρίας σας, το κινητό σας τηλέφωνο και αν ενδιαφέρεστε να παρουσιάσετε τον καμβά σας. Σε αυτή την περίπτωση (και ανάλογα με τον αριθμό των αιτήσεων) θα σας ενημερώσουμε τηλεφωνικά αν η παρουσίαση του καμβά σας γίνεται δεκτή. Η παρακολούθηση του πρώτου μέρους γίνεται δεκτή αυτομάτως.</p>
 {% endblock %}
