--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -7,7 +7,7 @@
         <div class="row">
             <div class="col-md-5">
                 <h1>ΟΚ!Τhess</h1>
-                <h2>Your early stage partner</h2>
+                <h2>Your early stage partner!</h2>
                 <p id="desc">OK!Thess provides space and technical support to teams of people with innovative ideas helping them to <strong>Validate a Business Model Fast</strong>, rather than hastily, and to <strong>Meet, Mix  and Connect</strong> with like-minded peers.</p>
                 <form>
                     <input type="text" name="firstname" placeholder=" First name">
